idea/testData/multiplatform/weaklyIncompatibleActualInIntermediateModule/top/top.kt
package sample

expect class <!LINE_MARKER("descr='Has actuals in common'")!>A<!> {
    fun f()
}